force-app/main/default/objects/sugati__Opportunity_Discount__c/sugati__Opportunity_Discount__c.object-meta.xml
<CustomObject>
    <label>Opportunity Discount</label>
    <nameField>
        <label>Opportunity Discount Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity Discounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>