force-app/main/default/objects/sugati__Opportunity_Discount__c/fields/sugati__Discount__c.field-meta.xml
<CustomField>
    <fullName>sugati__Discount__c</fullName>
    <label>Discount</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>