force-app/main/default/objects/sugati__Opportunity_Discount__c/fields/sugati__Discount_Config1__c.field-meta.xml
<CustomField>
    <fullName>sugati__Discount_Config1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Discount Config</label>
    <referenceTo>sugati__Discount_Config__c</referenceTo>
    <relationshipLabel>Opportunity Discounts</relationshipLabel>
    <relationshipName>Opportunity_Discounts</relationshipName>
    <type>Lookup</type>
</CustomField>