force-app/main/default/objects/sugati__Opportunity_Discount__c/fields/sugati__Notes__c.field-meta.xml
<CustomField>
    <fullName>sugati__Notes__c</fullName>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>