force-app/main/default/objects/sugati__Opportunity_Discount__c/fields/sugati__Opportunity__c.field-meta.xml
<CustomField>
    <fullName>sugati__Opportunity__c</fullName>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunity Discounts</relationshipLabel>
    <relationshipName>Opportunity_Discounts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>