force-app/main/default/objects/sugati__Opportunity_Discount__c/fields/sugati__Total_Discount__c.field-meta.xml
<CustomField>
    <fullName>sugati__Total_Discount__c</fullName>
    <formula>If(ISPICKVAL(sugati__Type__c, &apos;%&apos;), (sugati__DiscountP__c *sugati__Opportunity__r.Amount)
 ,  sugati__Discount__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>