force-app/main/default/objects/sugati__Opportunity_Discount__c/fields/sugati__Total_DiscountN__c.field-meta.xml
<CustomField>
    <fullName>sugati__Total_DiscountN__c</fullName>
    <label>Total DiscountN</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>