force-app/main/default/objects/sugati__Opportunity_Discount__c/fields/sugati__Type__c.field-meta.xml
<CustomField>
    <fullName>sugati__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>%</fullName>
            </value>
            <value>
                <fullName>Value</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>